--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -13,6 +13,34 @@
 	margin: 4px auto;
 }
 
+#loader{
+	width: 100%;
+/*	margin: 0 auto;
+	text-align: center;
+	top: 30%;
+	position: absolute;*/
+}
+#loader img{
+	display: block;
+	width: 200px;
+	height: 200px;
+	margin: 0 auto;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin:-60px 0 0 -60px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
 @media only screen and (max-width: 400px){
 	.padding-responsive{
 		padding: 0;
